--- a/myshop/shop/templates/shop/base.html
+++ b/myshop/shop/templates/shop/base.html
@@ -12,7 +12,16 @@
     </div>
     <div id="subheader">
         <div class="cart">
-            Empty
+            {% with total_items=cart|length %}
+                {%if cart|length > 0 %}
+                    Your Cart:
+                    <a href="{% url 'cart:cart_detail' %}">
+                        {{ total_items }} item {{ total_items|pluralize }}
+                        $ {{ cart.get_total_price }}</a>
+                {% else %}
+                    Your Cart is empty
+                {% endif %}
+            {% endwith %}
         </div>
     </div>
     <div id="content">
