Adding Order and Checkout functions, Celery is not yet working properly due to RabbitMQ issue

--- a/myshop/cart/templates/cart/detail.html
+++ b/myshop/cart/templates/cart/detail.html
@@ -51,6 +51,6 @@
     </table>
     <p>
         <a href="{% url 'shop:product_list' %}" class="button light">Continue shoppin</a>
-        <a href="#" class="button">Checkout</a>
+        <a href="{% url 'orders:order_create' %}" class="button">Checkout</a>
     </p>
 {% endblock %}
